--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
             <h2>Resume</h2>
 
-            <a href="https://drive.google.com/file/d/1NjlFkw-70aRml0ceKm8ukcXboqBV2muE/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a>
+            <a href="Sandhya.S resume .pdf" target="_blank" class="download-button">Download CV</a>
 
         </center>
 
