--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
             <!-- Add your profile picture here -->
 
-            <img src="passport photo.jpj" alt="Your Profile Picture" class="profile-picture">
+            <img src="Sandhya.S.pdf" alt="Your Profile Picture" class="profile-picture">
 
             <h1>SANDHYA.S</h1>
 
