--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
             <h1>SANDHYA.S</h1>
 
-            <p>Am computer science</p>
+            <p>Am computer science student</p>
 
         </div>
 
